# new-engineer

./: .gitignore  README.md  plan.md
controller/: CMakeLists.txt
controller/app/: arm.cpp  arm.h  arm_controller.cpp  board_comm.cpp  board_comm.h  can_monitor.cpp  control.cpp  imu_monitor.cpp  mine.cpp  motor_monitor.cpp  pump.cpp  serial_tool.cpp  serial_tool.h
controller/doc/: cv_comm.md  referee.md
controller/interface/: callback.cpp  robot.cpp
demo_arm/app/: arm.cpp  arm.h  arm_controller.cpp  arm_controller.h  board_comm.h  can_monitor.cpp  control.cpp  imu_monitor.cpp  imu_monitor.h  motor_monitor.cpp  motor_monitor.h  pump.cpp  serial_tool.cpp
demo_arm/interface/: callback.cpp  robot.cpp
doc/: electrical.md  manual.md  manual_v2.md  plan.md  todolist.md
engineer/: CMakeLists.txt
engineer/app/: arm.cpp  arm.h  mine.h  (+29 more)
engineer/base/: CMakeLists.txt
engineer/base/bsp/: bsp_buzzer.cpp
engineer/base/cap_comm/: cap_comm.cpp  cap_comm.h
engineer/base/common/: math.h  matrix.h  pid.h
engineer/base/cv_comm/: cv_comm.cpp  cv_comm.h  cv_protocol.h
engineer/base/imu/: imu.h
engineer/base/motor/: motor.cpp  motor.h
engineer/base/motor/driver/: htnc_motor_driver.cpp  htnc_motor_driver.h  mit_motor_driver.cpp  mit_motor_driver.h
engineer/base/referee_comm/: referee_comm.cpp  referee_comm.h  referee_protocol.h  referee_ui.cpp  referee_ui.h
engineer/base/robotics/: robotics.cpp  robotics.h
exchange_station/: README.md
imu/: UPDATE.md
matlab/: engineer.m  exchange_station.m  p560_idyn.m  p560_ikine.m  puma560.m  test_arm.m  ur.m  ur_ikine.m
(+148 files in other folders)
